[project]
name = "overlap-integral"
version = "0.1.0"
description = "This package aims to compute the overlap integral between two probability density functions."
authors = [{ name = "Matheus Bacigalupo Kiataki", email = "kiatakimatheus@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "plotly>=5.3",
    "kaleido==0.2.0"
]

[project.optional-dependencies]
dev = ["pytest>=3.8"]

[tool.poetry]
packages = [{ include = "overlap_integral", from = "src" }]
include = ["README.md", "LICENSE"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
